# What-Would---DO

./: .dvcignore  .gitignore  ARCHITECTURE.md  CHESS_ANALYZER_README.md  LC0_UPGRADE.md  OCR_SETUP.md  README.md  dvc.yaml  pyproject.toml  requirements.txt
.dvc/tmp/: lock
Backend/: .gitignore  advanced_magnus_predictor.py  create_clear_image.py  create_test_image.py  create_text_image.py  custom_chess_ocr.py  debug_ocr_comprehensive.py  main.py  requirements.txt  test_clear_board.py  test_final_deployment.py  test_improved_ocr.py  test_realistic_board.py  test_text_board.py
Backend/data_processing/: pgn-bin.py
Backend/data_processing/v2/: chess_gpt2_inference.py  chess_ocr.py  debug_model.py  estimate_m2_max.py  extract_positions_m3_pro.py  fine_tune.py  inference_class.py  pre_train.py  self_play_game.pgn  self_play_game_unchecked.pgn  self_play_magnus_transformer.py  stockfish_magnus_trainer.py  test_magnus_training.py  test_parallel_pipeline.py
Backend/data_processing/v2/lc0_training_data/: magnus_test.jsonl  magnus_val.jsonl  training_config.json
Backend/data_processing/v2/magnus_training_output/: magnus_training_config.json  (+1 more)
Backend/tests/: test_model.py
Frontend/: .env.example  README.md  package-lock.json  package.json  vercel.json
Frontend/.github/: copilot-instructions.md
Frontend/src/: App.css  App.tsx  index.css
Frontend/src/components/: ChessAnalyzer.css  ChessAnalyzer.tsx  ErrorBoundary.tsx  Navigation.css  Navigation.tsx
Frontend/src/pages/: AboutPage.css  AboutPage.tsx  AnalyzePage.css  AnalyzePage.tsx  WelcomePage.css  WelcomePage.tsx
Frontend/src/services/: api.ts
Frontend/src/types/: chess.ts
Frontend/src/utils/: chessUtils.ts
archive/v2_backup/: MAGNUS_TRAINING_GUIDE.md  benchmark_parallel.py  colab_analysis.py  colab_magnus_trainer.py  colab_practical.py  complete_colab_magnus_trainer.py  dvc_integration.py  estimate_performance.py  improved_magnus_training.py  inference.py  lc0_inference.py  mlops_model_manager.py  mlops_requirements.txt  model_dashboard.py  requirements_mlops.txt  run_improved_training.py  setup_mlops.py  test_magnus_model.py  test_stockfish_trainer.py  train_advanced_magnus.py  train_fast_magnus.py  train_m2_max.py  train_magnus_enhanced_mlops.py  train_magnus_fixed_mlops.py  train_magnus_m3_pro.py  train_magnus_mlops.py  train_magnus_simple_mlops.py  training_requirements.txt  training_status_report.md
archive/v2_backup/magnus_training_output/: magnus_style_analysis.txt
configs/: training_config.yaml
src/: __init__.py
src/data/: __init__.py  carlsen-games-quarter.pgn.dvc  carlsen-games.pgn.dvc
src/inference/: __init__.py
src/mlops/: __init__.py  dashboard.py  model_dashboard.py  model_manager.py
src/results/: comprehensive_mlflow_analysis.py
src/training/: __init__.py  train_enhanced_magnus.py  train_fast_magnus.py
src/utils/: __init__.py
(+1 files in other folders)
